--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.open</groupId>
 	<artifactId>ms-mail-sender</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>ms-mail-sender</name>
 	<description>A mail sender</description>
 	<properties>
