--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=YOUR_MAIL_HERE
-spring.mail.password=YOUR_PASSWORD_MAIL_HERE
+spring.mail.username=<YOUR_MAIL_HERE>
+spring.mail.password=<YOUR_PASSWORD_MAIL_HERE>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
